--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,8 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+
+    <!-- JSF mapping -->
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -19,7 +21,7 @@
     </servlet-mapping>
 
 
-    
+
 
     <session-config>
         <session-timeout>
@@ -32,7 +34,7 @@
 
 
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
-        <welcome-file>admin/index.xhtml</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>admin/index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
